Implement Frontier Apprentice
Add another route and custom content.
Pass data to an ejs template.
Create a simple CRUD capable list using Angular.
Create and use a custom layout.

--- a/locales/index_en.json
+++ b/locales/index_en.json
@@ -1,5 +1,5 @@
 {
-	"welcome_title": "Welcome Landing Page",
-	"welcome_message": "Welcome to the frontier-portfolio landing page. Replace this content with your own",
+	"welcome_title": "Welcome To Tyler's Frontier Portfolio",
+	"welcome_message": "This portfolio is built on the FamilySearch Frontier stack.",
   "sample_link": "View a sample page"
 }
